# Courses

./: README.md
CourseraStanfordAlgorithms/: todo
CourseraStanfordAlgorithms/ClosestPairOfPoints/: Makefile
CourseraStanfordAlgorithms/ClosestPairOfPoints/program/: main.cpp
CourseraStanfordAlgorithms/ClosestPairOfPoints/testrunner/: foo.cpp
CourseraStanfordAlgorithms/CountInversionsMergeSort/: Makefile
CourseraStanfordAlgorithms/CountInversionsMergeSort/program/: CMakeLists.txt  main.cpp
CourseraStanfordAlgorithms/CountInversionsMergeSort/testrunner/: CMakeLists.txt  foo.cpp
CourseraStanfordAlgorithms/DijkstraShortestPath/: .gitignore  CMakeLists.txt
CourseraStanfordAlgorithms/DijkstraShortestPath/program/: CMakeLists.txt  main.cpp
CourseraStanfordAlgorithms/DijkstraShortestPath/testrunner/: foo.cpp
CourseraStanfordAlgorithms/GraphMinimumCuts/: CMakeLists.txt
CourseraStanfordAlgorithms/GraphMinimumCuts/program/: CMakeLists.txt  main.cpp
CourseraStanfordAlgorithms/GraphMinimumCuts/testrunner/: foo.cpp
CourseraStanfordAlgorithms/KaratsubaAlgorithm/: CMakeLists.txt  Makefile
CourseraStanfordAlgorithms/KaratsubaAlgorithm/program/: CMakeLists.txt  main.cpp
CourseraStanfordAlgorithms/KaratsubaAlgorithm/src/: BigNumber.cpp  BigNumber.hpp
CourseraStanfordAlgorithms/KaratsubaAlgorithm/test/: BigNumber.cpp
CourseraStanfordAlgorithms/KaratsubaAlgorithm/testrunner/: BigNumber.cpp  CMakeLists.txt
CourseraStanfordAlgorithms/KosarajuTwoPassAlgorithm/: .gitignore  CMakeLists.txt  control.py
CourseraStanfordAlgorithms/KosarajuTwoPassAlgorithm/program/: CMakeLists.txt  main.cpp
CourseraStanfordAlgorithms/KosarajuTwoPassAlgorithm/testrunner/: CMakeLists.txt  foo.cpp
CourseraStanfordAlgorithms/MergeSort/testrunner/: foo.cpp
CourseraStanfordAlgorithms/QuickSort/: CMakeLists.txt
CourseraStanfordAlgorithms/QuickSort/program/: CMakeLists.txt  main.cpp
CourseraStanfordAlgorithms/QuickSort/testrunner/: CMakeLists.txt  foo.cpp
CourseraStanfordAlgorithms/RandomizedSelection/program/: CMakeLists.txt  main.cpp
CourseraStanfordAlgorithms/RandomizedSelection/testrunner/: CMakeLists.txt  order_statistics.cpp
CourseraStanfordAlgorithms/StrassenMatrixMultiplication/testrunner/: foo.cpp
IntroductionToMobileRobotics/00_SetupPython/: control.py  main.py
IntroductionToMobileRobotics/01_LinearAlgebra/: answers  main.py
IntroductionToMobileRobotics/LinearAlgebra/: answers  makefile  problems.py
cs231n/: BatchNormalization.html  download --mhtml - Google Search.mhtml
cs231n/assignment1/features/: questions  softmax.py
cs231n/assignment1/knn/: k_nearest_neighbor.py  main.py  makefile
cs231n/assignment1/softmax/: main.py
cs231n/assignment1/svm/: questions
cs231n/assignment1/two_layer_net/: main.py  questions
cs231n/assignment2/: BatchNormalization.md  ConvolutionalNetworks.ipynb  Dropout.ipynb  FullyConnectedNets.ipynb  PyTorch.ipynb  TensorFlow.ipynb  requirements.txt
cs231n/assignment2/.ipynb_checkpoints/: BatchNormalization-checkpoint.ipynb  BatchNormalization-checkpoint.md  ConvolutionalNetworks-checkpoint.ipynb  Dropout-checkpoint.ipynb  FullyConnectedNets-checkpoint.ipynb  FullyConnectedNets-checkpoint.md
cs231n/assignment2/cs231n/: layers.py  optim.py
cs231n/assignment3/: LSTM_Captioning.ipynb  NetworkVisualization-TensorFlow.ipynb  RNN_Captioning.ipynb  StyleTransfer-TensorFlow.ipynb  requirements.txt
cs231n/assignment3/cs231n/: data_utils.py  image_utils.py  rnn_layers.py
cs231n/features/: linear_svm.py  main.py  neural_net.py
cs231n/knn/: questions
cs231n/softmax/: questions
cs231n/svm/: linear_classifier.py  main.py
cs231n/two_layer_net/: main.py  neural_net.py
tmu_mvg/01/: theory_answers
tmu_mvg/02/: theory_answers
(+18 files in other folders)
